Feat: Nuevos tests y fix bugs